refactor(service): migrate GameStateService to support incremental player joins